[gd_scene load_steps=4 format=1]

[ext_resource path="res://Scenes/end_line.gd" type="Script" id=1]
[ext_resource path="res://Sound/Tlin.ogg" type="AudioStream" id=2]

[sub_resource type="PlaneShape" id=1]

plane = Plane( 0, 1, 0, 0 )

[node name="Area" type="Area" groups=[
"end_line",
"deleter",
]]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.97276, 0 )
shapes/0/trigger = true
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 6
collision/mask = 6
script/script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.97276, 0 )
shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="Timer" type="Timer" parent="."]

process_mode = 0
wait_time = 1.0
one_shot = false
autostart = false

[node name="Children" type="Spatial" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 2 )
stream/play = true
stream/loop = false
stream/volume_db = 14.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="body_enter" from="." to="." method="_on_Area_body_enter"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


